--- a/src/scss/basics/_vars.fonts.scss
+++ b/src/scss/basics/_vars.fonts.scss
@@ -1,4 +1,5 @@
-$body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+$body-font: "Source Sans Pro Sacf", Times, Helvetica, Arial, sans-serif;
 $head-font: $body-font;
+$monospace-font: Menlo, Monaco, 'Courier New', monospace;
 
 $line-height-base: 24/16;
