--- a/src/scss/basics/_mixins.scss
+++ b/src/scss/basics/_mixins.scss
@@ -56,3 +56,11 @@
 	font-weight: bold;
 	font-style: normal;
 }
+
+@mixin code-font() {
+	font-family: $monospace-font;
+	font-weight: normal;
+	font-style: normal;
+	font-size: 0.875rem;
+	line-height: 1rem;
+}
