--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -6,10 +6,22 @@ div.header{
 	background-image: none;
 	background-color: $color-gray-lightest;
 	border-bottom: 1px solid $color-gray-light;
+	.summary{
+		float:none;
+		position: absolute; 
+		right: 50%;
+		transform: translateX(50%);
+		display:block; 
+		width: 100%;
+		max-width: $max-width;
+		margin: 0 auto;
+	}
 	&title{
 		max-width: $max-width;
 		margin: 0 auto;
 	}
+
+
 
 }
 
