--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,8 @@
-
-
 @import "basics/functions";
 @import "basics/vars.grid";
 
 @import "basics/vars.colors";
+@import "basics/font.source-sans-pro";
 @import "basics/vars.fonts";
 @import "basics/mixins";
 
@@ -23,4 +22,10 @@
 @import "modules/sidebar";
 @import "modules/contents";
 @import "modules/footer";
+@import "modules/reflist";
+@import "modules/classindex";
+@import "modules/directory";
 @import "modules/file";
+@import "modules/member-decls";
+@import "modules/member-functions";
+@import "modules/params";
